manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: gox-nginx
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 8080
